--- a/Buttons Container/buttonsGrid.css
+++ b/Buttons Container/buttonsGrid.css
@@ -1,8 +1,8 @@
-#btns {
+.buttoncontainer {
     width: 75%;
 }
 
-.btn {
+ .buttoncontainer >.btn {
     width: 30%;
     height: 48px;
     font-size: 24px;
